Fix(Roles): create swagger and create controller public and private
