# src/core/roles/domain/structs/roles_response.go
@@ -1,6 +1,7 @@
 package structs_roles
 
-type UpdateRoleRequest struct {
+type RolesResponse struct {
+	ID          uint   `json:"id"`
 	Name        string `json:"name"`
 	Description string `json:"description"`
 }
