# src/core/roles/infra/controller/role_private_controller.go
@@ -2,48 +2,21 @@ package controller
 
 import (
 	"gestrym/src/core/roles/app"
-	"gestrym/src/core/roles/domain/structs"
+	structs_roles "gestrym/src/core/roles/domain/structs"
 	"net/http"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 )
 
-type RoleController struct {
+type RolePrivateController struct {
 	roleService app.IRoleService
 }
 
-func NewRoleController(rs app.IRoleService) *RoleController {
-	return &RoleController{
+func NewRolePrivateController(rs app.IRoleService) *RolePrivateController {
+	return &RolePrivateController{
 		roleService: rs,
 	}
-}
-
-// @Summary Crear Rol
-// @Description Crea un nuevo rol en la base de datos (Admin, Gym, etc).
-// @Tags Roles
-// @Accept json
-// @Produce json
-// @Param request body structs.CreateRoleRequest true "Estructura de creación del rol"
-// @Success 201 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Failure 500 {object} map[string]interface{}
-// @Security ApiKeyAuth
-// @Router /roles [post]
-func (c *RoleController) CreateRole(ctx *gin.Context) {
-	var req structs.CreateRoleRequest
-	if err := ctx.ShouldBindJSON(&req); err != nil {
-		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Petición inválida"})
-		return
-	}
-
-	role, err := c.roleService.CreateRole(ctx.Request.Context(), req.Name, req.Description)
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Error creando rol"})
-		return
-	}
-
-	ctx.JSON(http.StatusCreated, role)
 }
 
 // @Summary Editar Rol
@@ -52,14 +25,14 @@ func (c *RoleController) CreateRole(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param id path int true "ID del rol"
-// @Param request body structs.UpdateRoleRequest true "Estructura de actualización del rol"
+// @Param request body structs_roles.UpdateRoleRequest true "Estructura de actualización del rol"
 // @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} map[string]interface{}
 // @Failure 404 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Security ApiKeyAuth
-// @Router /roles/{id} [put]
-func (c *RoleController) UpdateRole(ctx *gin.Context) {
+// @Router /private/roles/{id} [put]
+func (c *RolePrivateController) UpdateRole(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	roleID, err := strconv.ParseUint(idParam, 10, 64)
 	if err != nil {
@@ -67,7 +40,7 @@ func (c *RoleController) UpdateRole(ctx *gin.Context) {
 		return
 	}
 
-	var req structs.UpdateRoleRequest
+	var req structs_roles.UpdateRoleRequest
 	if err := ctx.ShouldBindJSON(&req); err != nil {
 		ctx.JSON(http.StatusBadRequest, gin.H{"error": "Petición inválida"})
 		return
@@ -97,8 +70,8 @@ func (c *RoleController) UpdateRole(ctx *gin.Context) {
 // @Failure 404 {object} map[string]interface{}
 // @Failure 500 {object} map[string]interface{}
 // @Security ApiKeyAuth
-// @Router /roles/{id} [delete]
-func (c *RoleController) DisableRole(ctx *gin.Context) {
+// @Router /private/roles/{id} [delete]
+func (c *RolePrivateController) DisableRole(ctx *gin.Context) {
 	idParam := ctx.Param("id")
 	roleID, err := strconv.ParseUint(idParam, 10, 64)
 	if err != nil {
@@ -112,24 +85,4 @@ func (c *RoleController) DisableRole(ctx *gin.Context) {
 	}
 
 	ctx.JSON(http.StatusOK, gin.H{"message": "Rol deshabilitado correctamente"})
-}
-
-// @Summary Obtener todos los Roles
-// @Description Obtiene todos los roles disponibles.
-// @Tags Roles
-// @Produce json
-// @Success 200 {object} map[string]interface{}
-// @Failure 400 {object} map[string]interface{}
-// @Failure 404 {object} map[string]interface{}
-// @Failure 500 {object} map[string]interface{}
-// @Security ApiKeyAuth
-// @Router /roles [get]
-func (c *RoleController) GetRoles(ctx *gin.Context) {
-	roles, err := c.roleService.GetRoles()
-	if err != nil {
-		ctx.JSON(http.StatusInternalServerError, gin.H{"error": "Error obteniendo roles"})
-		return
-	}
-
-	ctx.JSON(http.StatusOK, roles)
 }
